stabilized a bit the non-website

--- a/backend/sections/navbar.pug
+++ b/backend/sections/navbar.pug
@@ -15,4 +15,8 @@ block navbar
               a(href='/') Home
             li
               a(href='/about') About
+            li
+              a(href='/static/extension.zip')
+                b Development version 
+                | web-extension
             
