added WorkSans ttf

--- a/backend/styles/index.styl
+++ b/backend/styles/index.styl
@@ -160,7 +160,7 @@ p
   font-family 'Work Sans'
   font-style normal
   font-weight 400
-  src local('Work Sans'), url(/js/local/WorkSans.ttf) format('truetype');
+  src local('Work Sans'), url(/fonts/WorkSans.ttf) format('truetype');
 
   /*header*/
 
