fixed logo location

--- a/backend/sections/index.pug
+++ b/backend/sections/index.pug
@@ -15,9 +15,9 @@ html
     meta(property="og:type" content="website")
     meta(property="og:description" content="yt, t-trex")
     meta(property="og:url" content="https://y.tracking.exposed")
-    meta(property="og:image" content="https://y.tracking.exposed/images/fbtrex_logo-400x400.png")
-    meta(property="og:image:width" content="400")
-    meta(property="og:image:height" content="400")
+    meta(property="og:image" content="https://y.tracking.exposed/images/youtube-trex-logo.png")
+    meta(property="og:image:width" content="1000")
+    meta(property="og:image:height" content="1000")
     title facebook tracking exposed
 
   body
@@ -26,5 +26,5 @@ html
     include navbar
     
     .container-fluid
-        h1 welcome!
-        h3 nothing to see, so far
+        h1.center welcome!
+        h3.center nothing to see, yet
