--- a/backend/sections/header.pug
+++ b/backend/sections/header.pug
@@ -9,7 +9,7 @@ block header
           |  /> 
 
       div.col-xs-4.col-sm-4.col-md-4.col-lg-4.pull-right
-        img.fbtrexlogo(alt="logo of fbtrex" src="/images/yttrex_logo.svg")
+        img.fbtrexlogo(alt="logo of fbtrex" src="/images/youtube-trex-logo.png")
       div.col-xs-12.col-sm-8.col-md-8.col-lg-8
        a(href="/")
         h2
