--- a/backend/sections/personal.pug
+++ b/backend/sections/personal.pug
@@ -20,10 +20,15 @@ html
         meta(property="og:title" content="Personal poage")
         title yttrex, personal page
 
-    body(onload="loadpersonal('#list');")
+    body(onload="loadpersonal();")
         include header
         include navbar
 
         .container-fluid
-            h2 This is a pretty simple page without any expectation of give you anything you don't know yet
-            
+            h2 Most recent 40 videos submitted by your profile
+            div#download download
+                button#csv CSV
+                button#json JSON
+         
+        .container-fluid
+            div#videolist
