--- a/backend/sections/personal.pug
+++ b/backend/sections/personal.pug
@@ -25,7 +25,7 @@ html
         include navbar
 
         .container-fluid
-            h2 Most recent 40 videos submitted by your profile
+            h2 Most recent videos submitted by your profile
             div#download download
                 button#csv CSV
                 button#json JSON
