--- a/backend/sections/index.pug
+++ b/backend/sections/index.pug
@@ -27,4 +27,10 @@ html
     
     .container-fluid
         h1.center welcome!
-        h3.center nothing to see, yet
+        p There are the browser extension you are look for: 
+            a(href="https://chrome.google.com/webstore/detail/yttrex/kbbgjcgdcibilpahljnlejefcehbljnd") Chrome
+            |, 
+            a(href="https://addons.mozilla.org/en-US/firefox/addon/yttrex/") Firefox
+            |.
+
+
