minor changes to the ytTREX web-extension, bump to 1.1.0, new design in progress

--- a/backend/sections/personal.pug
+++ b/backend/sections/personal.pug
@@ -15,7 +15,7 @@ html
         meta(charset="utf-8")
         meta(http-equiv="X-UA-Compatible" content="IE=edge")
         meta(name="viewport" content="width=device-width, initial-scale=1")
-        meta(name="keywords" content="facebook tracking exposed")
+        meta(name="keywords" content="youtube tracking exposed")
 
         meta(property="og:title" content="Personal poage")
         title yttrex, personal page
