--- a/backend/sections/404.pug
+++ b/backend/sections/404.pug
@@ -15,10 +15,12 @@ html
   body
 
     include header
-    include navbar
 
     .container-fluid.center
         h1 Page not found! 
 
-        h3 If you found a broken link, please 
-          a(href="https://github.com/tracking-exposed/yttrex") report the error to the developers 
+        h3 You found a broken link! if you feel chatty, please drop a line in our unmaintained discussion place on Facebook (we should be on Zuckland to study it, give a look to 
+            a(href="https://facebook.tracking.exposed") facebook.tracking.exposed
+            |, or if you are interested in the internals, watch 
+            a(href="https://github.com/tracking-exposed/yttrex") the code
+            |.
