--- a/backend/styles/index.styl
+++ b/backend/styles/index.styl
@@ -223,4 +223,24 @@ p
     cursor pointer
 
 .space
-   margin-bottom 20px
+    margin-bottom 20px
+
+.title
+    margin-left 8%
+    padding-left 2%
+    margin-right 8%
+    padding-right 2%
+    text-align center
+    font-size 8em
+
+.negative
+    background black
+    color white
+    border-radius 0px 35px 0px 35px
+
+.highlight
+    border-radius 0px 35px 0px 35px
+    border black 5px solid
+
+.strike
+    text-decoration line-through
