--- a/backend/sections/header.pug
+++ b/backend/sections/header.pug
@@ -1,20 +1,22 @@
-block header
-  
-  div.container
-    div.topheader
-      div.col-xs-8.col-sm-8.col-md-8.col-lg-8
-        span < 
-          img.githublogo(src="/images/github-256.png")
-          a(href="https://github.com/tracking-exposed/yttrex") yttrex repository 
-          |  /> 
+nav.navbar.navbar-default.navbar-static-top
+    div.container
+        div.navbar-header
+            button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#thenavbar" aria-expanded="false")
+                span(id="sr-only") Toggle navigation
+                span.icon-bar
+                span.icon-bar
+                span.icon-bar
 
-      div.col-xs-4.col-sm-4.col-md-4.col-lg-4.pull-right
-        img.fbtrexlogo(alt="logo of yttrex" src="/images/youtube-trex-logo.png")
-      div.col-xs-12.col-sm-8.col-md-8.col-lg-8
-       a(href="/")
-        h2
-          span.blue youtube
-          |.
-          span.orange tracking
-          |.
-          span.green exposed
+        div.collapse.navbar-collapse(id="thenavbar")
+            ul.nav.navbar-nav
+                li
+                    a(href='/') Home
+                li
+                    a(href="https://github.com/tracking-exposed/yttrex") 
+                        img.githublogo(src="/images/github-256.png")
+                li
+                    a(href='https://tracking.exposed') our Manifesto
+                li
+                    a(href='/privacy-statement') how we respect 
+                        span.strike your data
+                        b  you
