created the sequence UX and backend

--- a/backend/sections/divergency.pug
+++ b/backend/sections/divergency.pug
@@ -25,25 +25,25 @@ html
         include header
 
         .container-fluid.extension-missing
-            h1.title.negative
-                |  You see this because someone wants to check with you, how much 
-                i YouTube's algorithm 
-                |  lead your experiences to diverge
-            h1.title You should re-open this link with a browser where you installed the ytTREX extension, it is necessary to collect evidences
+            h1.text.negative How much YouTubes' algorithm lead informations to diverge?
+            h1.text.highlight Open this page in a browser with installed the ytTREX extension
             include downloads
+            p.text p.s. this is necessary to collect the evidences; the subject under investigation is YTs' algorithm, 
+                a(href="/privacy-statement") not you
+                |  ;)
 
         .container-fluid.extension-missing.faq
-            h1.title.negative How does it work?
-            h1.title Your friend select a list of videos. ytTREX recorded which is the
+            h1.text.negative How does it work?
+            h1.text Your friend select a list of videos. ytTREX recorded which is the
                 i next autoplay
                 |, and the 20
                 i related 
-                |  videos are the same. Now you can record them and compare them
+                |  videos YT is picking.
 
         .container-fluid.extension-present
-            h1.title.negative comparison list
+            h1.text.negative comparison list
             #video--list
 
         .container-fluid
-            h1.title.negative ytTREX display how algorithms have a role, in making the perception of the public discourse, diverge from people you assume likeminded.
+            h1.text.negative ytTREX display how algorithms have a role, in making the perception of the public discourse, diverge from people you assume like-minded.
                 
