--- a/backend/sections/header.pug
+++ b/backend/sections/header.pug
@@ -18,5 +18,5 @@ nav.navbar.navbar-default.navbar-static-top
                     a(href='https://tracking.exposed') our Manifesto
                 li
                     a(href='/privacy-statement') how we respect 
-                        span.strike your data
+                        s your data
                         b  you
