--- a/backend/styles/index.styl
+++ b/backend/styles/index.styl
@@ -225,11 +225,13 @@ p
 .space
     margin-bottom 20px
 
-.title
+.text
     margin-left 8%
     padding-left 2%
     margin-right 8%
     padding-right 2%
+
+h1.text
     text-align center
     font-size 8em
 
@@ -242,5 +244,10 @@ p
     border-radius 0px 35px 0px 35px
     border black 5px solid
 
-.strike
-    text-decoration line-through
+.footer
+    border-top grey 0.5px dotted
+
+.variable
+    font-family monospace
+    background-color #f2ffc9
+    
