work in progress in backend side

--- a/backend/sections/footer.pug
+++ b/backend/sections/footer.pug
@@ -1,2 +1,7 @@
-.container-fluid.text
-    smaller free space for propaganda, for example: to be destinated 
+.container-fluid.text.footer
+    smaller 
+        i know more - 
+        a(href="https://tracking.exposed") TREX
+        |  manifesto - 
+        a(href="https://facebook.tracking.exposed") fbTREX
+        |  the Facebook analysis.
