--- a/backend/sections/index.pug
+++ b/backend/sections/index.pug
@@ -31,10 +31,14 @@ html
         h2.title.negative YouTubes' issues are the product of more than one variable
         include carousel
         h2.title.negative platform politics are scrutinized because they are concrete; humans relate to that
-        h2.title.highlight ytTREX show what is invisible
+        h2.title.highlight it is not the same for algorithms: subtle, mathematics, inaccessible
+        h2.title.negative ytTREX show what is invisible
         include downloads
-        h2.title.negative ytTREX expose the algorithm
+        h2.title.highlight ytTREX expose the algorithm
         include downloads
+
+
+    include footer
 
 
 
