--- a/backend/sections/webscripts/personal.css
+++ b/backend/sections/webscripts/personal.css
@@ -78,4 +78,36 @@
     }
 }
 
+.labelentry {
+    position: relative;
+	border: 0;
+	width: 100%;
+    text-align: center;
+    border-bottom: 1px black solid;
+    margin-bottom: 2px;
+}
 
+.labelentry i {
+    position: absolute;
+    width: 1px;
+    height: 80%;
+    background-color: gray;
+    left: 5px;
+    top: 10%;
+    animation-name: blink;
+    animation-duration: 800ms;
+    animation-iteration-count: infinite;
+    opacity: 1;
+}
+
+.labelentry input:focus + i {
+    display: none;
+}
+
+#go {
+    background-color: #acfba8;
+    border: 0;
+    border-radius: 5px;
+    padding: 5px;
+    font-weight: 900;
+}
