--- a/backend/sections/index.pug
+++ b/backend/sections/index.pug
@@ -13,11 +13,11 @@ html
     script(type='text/javascript', src='/js/collapse.js')
     script(type='text/javascript', src='/js/bootstrap.min.js')
 
-    meta(property="og:title" content="yt, t-rex")
+    meta(property="og:title" content="ytTREX")
     meta(property="og:type" content="website")
-    meta(property="og:description" content="yt, t-trex")
-    meta(property="og:url" content="https://y.tracking.exposed")
-    meta(property="og:image" content="https://y.tracking.exposed/images/youtube-trex-logo.png")
+    meta(property="og:description" content="youtube.TREX is an educative project to explain how algorithms have emergent properties to mess up with our collective understanding. TL;DR: see how you and your friends get personalized perceptions")
+    meta(property="og:url" content="https://youtube.tracking.exposed")
+    meta(property="og:image" content="https://youtube.tracking.exposed/images/youtube-trex-logo.png")
     meta(property="og:image:width" content="1000")
     meta(property="og:image:height" content="1000")
 
@@ -28,17 +28,31 @@ html
     include header
     
     .container-fluid
-        h2.title.negative YouTubes' issues are the product of more than one variable
+        h1.title.negative YouTube works great for individuals, but shitty for societies
         include carousel
-        h2.title.negative platform politics are scrutinized because they are concrete; humans relate to that
-        h2.title.highlight it is not the same for algorithms: subtle, mathematics, inaccessible
+        h2.title.negative Platforms tell us to be 
+            i neutral
+            |, but with their internal techno-politics, they (willingly or not) influence collective phenomena
+        h1.title We want to keep them accountable!
+        include downloads
+        h2.title.silly "But a commercial platform has all the rights to do bu$ine$$..."
+        h1.title not the point: here, we think to the future! 
+        h1.title.negative society decides what is a right and what is an abuse, and this, is an educative project to change your mind on techno-politics
+        h1.title to show 
+            // even to blind people 
+            | why algorithms are political
+        include downloads
+        h2.title.negative youtube.tracking.exposed collects which video are suggested to you
+        h2.title.highlight ytTREX expose the algorithm
         h2.title.negative ytTREX show what is invisible
         include downloads
-        h2.title.highlight ytTREX expose the algorithm
-        include downloads
+        h2.title.negative (at this point you should have clicked on the button and start to play with the extention)
 
+        span.col-md-6
+            h1.title.highlight See how it works
+        span.col-md-6
+            h1.title.highlight About us
 
-    include footer
 
 
 
