--- a/backend/styles/index.styl
+++ b/backend/styles/index.styl
@@ -1,4 +1,3 @@
-
 *
   margin 0
   padding 0
@@ -102,6 +101,9 @@ h1.text
     text-align center
     font-size 8em
 
+.title
+    text-align center
+
 .negative
     background black
     color white
@@ -114,7 +116,10 @@ h1.text
     padding 2em
 
 .footer
+    margin-top 5px
     border-top black 1px solid
+    border-left black 1px solid
+    border-right black 1px solid
     padding 1em
 
 .variable
