--- a/backend/sections/index.pug
+++ b/backend/sections/index.pug
@@ -28,30 +28,30 @@ html
     include header
     
     .container-fluid
-        h1.title.negative YouTube works great for individuals, but shitty for societies
+        h1.centered.negative YouTube works great for individuals, but shitty for societies
         include carousel
-        h2.title.negative Platforms tell us to be 
+        h2.centered.negative Platforms tell us to be 
             i neutral
             |, but with their internal techno-politics, they (willingly or not) influence collective phenomena
-        h1.title We want to keep them accountable!
+        h1.centered We want to keep them accountable!
         include downloads
-        h2.title.silly "But a commercial platform has all the rights to do bu$ine$$..."
-        h1.title not the point: here, we think to the future! 
-        h1.title.negative society decides what is a right and what is an abuse, and this, is an educative project to change your mind on techno-politics
-        h1.title to show 
+        h2.centered.silly "But a commercial platform has all the rights to do bu$ine$$..."
+        h1.centered not the point: here, we think to the future! 
+        h1.centered.negative society decides what is a right and what is an abuse, and this, is an educative project to change your mind on techno-politics
+        h1.centered to show 
             // even to blind people 
             | why algorithms are political
         include downloads
-        h2.title.negative youtube.tracking.exposed collects which video are suggested to you
-        h2.title.highlight ytTREX expose the algorithm
-        h2.title.negative ytTREX show what is invisible
+        h2.centered.negative youtube.tracking.exposed collects which video are suggested to you
+        h2.centered.highlight ytTREX expose the algorithm
+        h2.centered.negative ytTREX show what is invisible
         include downloads
-        h2.title.negative (at this point you should have clicked on the button and start to play with the extention)
+        h2.centered.negative (at this point you should have clicked on the button and start to play with the extention)
 
         span.col-md-6
-            h1.title.highlight See how it works
+            h1.centered.highlight See how it works
         span.col-md-6
-            h1.title.highlight About us
+            h1.centered.highlight About us
 
 
 
