--- a/backend/sections/personal/landing.pug
+++ b/backend/sections/personal/landing.pug
@@ -30,7 +30,7 @@ html
                     |; It might contain sequence of the videos you watched, and YT's personalized suggestions
                 h2.text.right
                     span#codename.variable [codename]
-                    |  is your unique codename
+                    |  is you!
 
             include menu
         include ../footer
