--- a/backend/sections/personal/divergencies.pug
+++ b/backend/sections/personal/divergencies.pug
@@ -1,2 +1,5 @@
-p.text All the divergency you experiencies are here collected
+p.text All the divergency test you created and participated are here!
+
+h2.text (Actually not true, it is a feature should be implemented)
+
     #divergencies--list
